# FlareCast

./: .gitignore  FlareCast.sln  README.md
FlareCast/: AGamepad.cpp  AGamepad.h  AudioIn.h  AudioMix.cpp  AudioMix.h  AudioOut.h  AudioSource.cpp  AudioSource.h  AudioTools.h  ButtonLock.h  CMakeLists.txt  ChatLog.h  CompilerDirectives.h  DX11.cpp  DX11.h  DualshockGamepad.h  Fix Encoding.ps1  FlareCast.vcxproj  FlareCast.vcxproj.filters  Frequency.h  GameData.h  GamepadClient.cpp  GamepadClient.h  GamepadState.h  Guest.h  GuestDataList.h  GuestDevice.h  GuestList.cpp  GuestList.h  GuestTier.h  Hosting.cpp  Hosting.h  IGamepadReader.h  KeyboardMaps.h  KeyboardMapsUtil.cpp  KeyboardMapsUtil.h  Main.cpp  MasterOfPuppets.cpp  MasterOfPuppets.h  MetadataCache.cpp  (+12 more)
FlareCast/chatbot/: ACommand.h  ChatBot.cpp  ChatBot.h  ChatBotCustom.h
FlareCast/chatbot/commands/: CommandBotMessage.h  CommandDefaultMessage.h  CommandTemplate.h
FlareCast/chatbot/commands/god/: CommandAddPS.h  CommandAddXbox.h  CommandMod.h  CommandPrivate.h  CommandPublic.h  CommandQuit.h  CommandSpeakers.h  CommandUnVIP.h  CommandUnmod.h  CommandVIP.h  CommandVersion.h
FlareCast/chatbot/commands/guest/: Command8Ball.h  CommandBB.h  CommandBonk.h  CommandDiscord.h  CommandFF.h  CommandFortune.h  CommandHelp.h  CommandKeyboard.h  CommandMirror.h  CommandPads.h  CommandPing.h  CommandRPG.h  CommandRollCall.h  CommandSFX.h  CommandSpectate.h  CommandStopSFX.h  CommandSwap.h  CommandTriangle.h
FlareCast/chatbot/commands/mod/: CommandBan.h  CommandCooldown.h  CommandDC.h  CommandDCAll.h  CommandDecrease.h  CommandExtend.h  CommandHotseat.h  CommandKick.h  CommandLock.h  CommandLockAll.h  CommandMute.h  CommandName.h  CommandOne.h  CommandRC.h  CommandRestart.h  CommandStrip.h  CommandStripAll.h  CommandUnban.h  CommandUnbanLastIP.h  CommandUnmute.h  CommandVerify.h  CommandVideoFix.h  CommandWarmup.h
FlareCast/controllers/: Arcade.cpp  Arcade.h  AutoMod.h  Hotseat.cpp  Hotseat.h  Macro.cpp  Macro.h  ProcessMan.h  Tournament.cpp  Tournament.h  WebSocket.cpp  WebSocket.h
FlareCast/core/: Cache.cpp  Cache.h  Config.cpp  Config.h
FlareCast/globals/: AppColors.cpp  AppFonts.cpp  AppIcons.cpp  AppIcons.h
FlareCast/helpers/: Bitwise.h  Clock.h  Countries.h  Debouncer.h  Dice.h  Keymap.h  PathHelper.cpp  PathHelper.h  Stopwatch.h  StopwatchTimer.cpp  StopwatchTimer.h  Stringer.h  TimeT.h  Timespan.h  Utils.h
FlareCast/imgui/: imconfig.h  imform.h  imgui.h  imgui_colors.h  imgui_impl_dx11.h  imgui_impl_win32.h  imgui_internal.h  imgui_markdown.h  implot.h  implot_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
FlareCast/lists/: BanList.h  GameDataList.h  ModList.h  SFXList.h  TierList.cpp  TierList.h  VIPList.h  VerifiedList.h
FlareCast/models/: CommandInfo.h  GuestData.h
FlareCast/sfx/: _sfx-sample.json
FlareCast/themes/: arcade.json
FlareCast/widgets/: AlertWidget.cpp  AlertWidget.h  AnimatedGamepadWidget.h  AudioControlWidget.cpp  AudioControlWidget.h  AudioSettingsWidget.cpp  AudioSettingsWidget.h  BackgroundWidget.cpp  BackgroundWidget.h  BoolButtonWidget.h  ButtonLockWidget.cpp  ButtonLockWidget.h  ChatWidget.cpp  ChatWidget.h  ConfirmPopupWidget.cpp  ConfirmPopupWidget.h  DeveloperWidget.cpp  DeveloperWidget.h  GamepadsWidget.cpp  GamepadsWidget.h  GuestListWidget.cpp  GuestListWidget.h  HostInfoWidget.cpp  HostInfoWidget.h  HostSettingsWidget.cpp  HostSettingsWidget.h  HotseatWidget.cpp  HotseatWidget.h  IconButton.h  IntRangeWidget.cpp  IntRangeWidget.h  KeyboardMapWidget.cpp  KeyboardMapWidget.h  LibraryWidget.cpp  LibraryWidget.h  LoadingRingWidget.cpp  LoadingRingWidget.h  LogWidget.cpp  LogWidget.h  LoginWidget.cpp  (+29 more)
